<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" android:text="@string/appName"/>
<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1" android:orientation="vertical" android:background="@color/myColor">
    <TextView android:layout_width="wrap_content" android:id="@+id/textView5" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center_horizontal" android:text="@string/Date"></TextView>
</LinearLayout>
<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_weight="1" android:background="@color/myColor">
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="0dp" android:layout_weight="1" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="@string/currency1"></TextView>
        <EditText android:id="@+id/editText1" android:inputType="numberDecimal" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:text="@string/currency2"></TextView>
        <EditText android:id="@+id/editText2" android:inputType="numberDecimal" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:text="@string/currency3"></TextView>
        <EditText android:id="@+id/editText3" android:inputType="numberDecimal" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></EditText>
    </TableRow>
    <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp" android:text="@string/currency4"></TextView>
        <EditText android:id="@+id/editText4" android:inputType="numberDecimal" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></EditText>
    </TableRow>
    <EditText android:id="@+id/editText5" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
</TableLayout>
<DigitalClock android:id="@+id/digitalClock1" android:layout_width="wrap_content" android:text="DigitalClock" android:layout_gravity="right" android:layout_height="wrap_content"></DigitalClock>
</LinearLayout>
